Fix sticky pivot on iOS

--- a/src/BlazorUI/Demo/Client/Shared/Pages/Components/Breadcrumb/BitBreadcrumbDemo.razor.scss
+++ b/src/BlazorUI/Demo/Client/Shared/Pages/Components/Breadcrumb/BitBreadcrumbDemo.razor.scss
@@ -23,14 +23,6 @@
             background: greenyellow;
         }
     }
-
-    .pivot-sticky-header {
-        z-index: 10;
-        position: sticky;
-        padding: rem(10px);
-        background-color: $bit-color-background-secondary;
-        top: calc(rem(75px) + var(--bit-status-bar-height));
-    }
 }
 
 .example-box {
