--- a/src/BlazorUI/Demo/Client/Shared/Pages/Components/Nav/BitNavDemo.razor.scss
+++ b/src/BlazorUI/Demo/Client/Shared/Pages/Components/Nav/BitNavDemo.razor.scss
@@ -16,14 +16,6 @@
         align-items: center;
         flex-flow: row nowrap;
     }
-
-    .pivot-sticky-header {
-        z-index: 10;
-        position: sticky;
-        padding: rem(10px);
-        background-color: $bit-color-background-secondary;
-        top: calc(rem(75px) + var(--bit-status-bar-height));
-    }
 }
 
 .example-box {
